@@ -23,6 +23,26 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -413,6 +433,69 @@ parameter_list|()
 block|{
 return|return
 name|entity
+return|;
+block|}
+comment|/**          * @return ObjEntities mapped to current DbEntity excluding inherited          */
+specifier|public
+name|Collection
+argument_list|<
+name|ObjEntity
+argument_list|>
+name|getMappedObjEntities
+parameter_list|()
+block|{
+name|Collection
+argument_list|<
+name|ObjEntity
+argument_list|>
+name|entities
+init|=
+name|entity
+operator|.
+name|mappedObjEntities
+argument_list|()
+decl_stmt|;
+name|Iterator
+argument_list|<
+name|ObjEntity
+argument_list|>
+name|iterator
+init|=
+name|entities
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|iterator
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|iterator
+operator|.
+name|next
+argument_list|()
+operator|.
+name|getSuperEntity
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|iterator
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+return|return
+name|entities
 return|;
 block|}
 specifier|public
