@@ -239,6 +239,16 @@ name|Collection
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
 begin_comment
 comment|/**  * Action that synchronizes all ObjEntities with the current state of the  * selected DbEntity.  */
 end_comment
@@ -411,6 +421,12 @@ name|getCurrentDataMap
 argument_list|()
 argument_list|)
 decl_stmt|;
+comment|// filter out inherited entities, as we need to add attributes only to the roots
+name|filterInheritedEntities
+argument_list|(
+name|entities
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|ObjEntity
@@ -516,6 +532,59 @@ argument_list|(
 name|undoableEdit
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+comment|/** 	 * This method works only for case when all inherited entities bound to same DbEntity 	 * if this will ever change some additional checks should be performed. 	 */
+specifier|private
+name|void
+name|filterInheritedEntities
+parameter_list|(
+name|Collection
+argument_list|<
+name|ObjEntity
+argument_list|>
+name|entities
+parameter_list|)
+block|{
+comment|// entities.removeIf(c -> c.getSuperEntity() != null);
+name|Iterator
+argument_list|<
+name|ObjEntity
+argument_list|>
+name|it
+init|=
+name|entities
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|it
+operator|.
+name|next
+argument_list|()
+operator|.
+name|getSuperEntity
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|it
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 specifier|static
